@@ -327,6 +327,9 @@ See FvwmTheme.
 .IP "*FvwmPagerHilightColorset \fIdesk colorset\fP"
 Tells the module to use colorset \fIcolorset\fP for hilighting on \fIdesk\fP.
 See FvwmTheme.
+.IP "*FvwmPagerWindowColorsets \fIcolorset activecolorset\fP"
+Uses colorsets in the same way as *FvwmPagerWindowColors.
+See FvwmTheme.
 
 .SH AUTHOR
 Robert Nation
