@@ -1,3 +1,7 @@
+1999-08-05  Brad Giaccio
+
+	* FvwmPager/*: added colorset support
+
 1999-08-05  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>
 
 	* FvwmForm/FvwmForm.c: 
